# Vaticano

./: .clang-format  Cargo.toml  LICENSE  Makefile  README.md  callgrind.out
src/: board.rs  main.c  main.cpp  main.rs  piece.rs
src/Board/: Board.c  Board.cpp  Board.h
src/Pieces/: Makefile  Piece.c  Piece.cpp  Piece.h  piece-check.c
