[package]
name = "Vaticano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[lib]
name = "components"
path = "src/lib.rs"

[lints.clippy]
needless_return = "allow"

[profile.release]
opt-level = 3
debug = 2
